电话拨号器android M版本动态申请权限

--- a/test/res/layout/activity_main.xml
+++ b/test/res/layout/activity_main.xml
@@ -5,8 +5,33 @@
     tools:context="${relativePackage}.${activityClass}" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/calltest" />
+
+    <EditText
+        android:id="@+id/editText1"
+        android:labelFor="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/button1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="38dp"
+        android:ems="10"
+        android:inputType="phone" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/editText1"
+        android:layout_marginTop="65dp"
+        android:onClick="onClickCall"
+        android:text="@string/Button" />
 
 </RelativeLayout>
