--- a/SqliteDB/res/layout/activity_main.xml
+++ b/SqliteDB/res/layout/activity_main.xml
@@ -1,93 +1,43 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+   	android:orientation="vertical"
     tools:context="${relativePackage}.${activityClass}" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    
+<LinearLayout 
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true" 
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="84dp"
-        android:onClick="onClickbutton"
-        android:text="@string/Button" />
+	   <TextView
+	       android:layout_width="120dp"
+	       android:layout_height="wrap_content"
+	       android:text="姓名"/>
+	   	
+	   
+	   <TextView
+		    android:id="@+id/phone"
+		    android:layout_width="150dp"
+		    android:layout_height="wrap_content"
+		    android:text="电话"/>
+	   
+	   <TextView
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:text="存款"/>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button1"
-        android:layout_marginStart="16dp"
-        android:layout_toEndOf="@+id/button1"
-        android:onClick="saveqlit"
-        android:text="@string/Button1" />
+</LinearLayout>
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button2"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_marginStart="28dp"
-        android:layout_toEndOf="@+id/button2"
-        android:onClick="findSQlit"
-        android:text="@string/Button2" />
+    
+    <ListView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" 
+        android:id="@+id/listView"/>"
+    
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true" 
-        android:layout_below="@+id/button1"
-        android:layout_marginTop="28dp"
-        android:onClick="updateSqlit"
-        android:text="@string/Button3" />
+ 
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button4"
-        android:layout_alignStart="@+id/button2" 
-        android:onClick="countSqlit"
-        android:text="@string/Button4" />
-
-    <Button
-        android:id="@+id/button6"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button5"
-        android:layout_alignBottom="@+id/button5"
-        android:layout_alignStart="@+id/button3"
-        android:onClick="onClickScrollDate"
-        android:text="@string/Button5" />
-
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button6"
-        android:layout_marginTop="28dp"
-        android:layout_toStartOf="@+id/button5"
-        android:onClick="onClickDelect"
-        android:text="@string/Button6" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button7"
-        android:layout_toStartOf="@+id/button6"
-        android:onClick="onClickPayment"
-        android:text="@string/Button7" />
-
-</RelativeLayout>
+</LinearLayout>
